--- a/yaapp/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-20 11:36+0200\n"
+"POT-Creation-Date: 2012-09-20 14:48+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -666,7 +666,7 @@ msgstr "Amis"
 
 #: templates/web/favorites.html:29
 #: templates/web/selections.html:34
-#: templates/yabase/app/newRadio/newRadioPage.mustache:10
+#: templates/yabase/app/newRadio/newRadioPage.mustache:25
 msgid "Name"
 msgstr "Nom"
 
@@ -1231,19 +1231,42 @@ msgstr "Minutes de musique écoutées"
 msgid "New messages"
 msgstr "Nouveaux messages"
 
-#: templates/yabase/app/newRadio/newRadioPage.mustache:30
+#: templates/yabase/app/newRadio/newRadioPage.mustache:7
+msgid "Radio created"
+msgstr "Radio créee"
+
+#: templates/yabase/app/newRadio/newRadioPage.mustache:10
+msgid "Your radio has been created successfully."
+msgstr "Votre radio est créee."
+
+#: templates/yabase/app/newRadio/newRadioPage.mustache:11
+msgid ""
+"You will be redirected to the programming page where you will be able to add "
+"content"
+msgstr "Vous allez être redirigé vers la page de programmation où vous pourrez "
+"ajouter du contenu."
+
+#: templates/yabase/app/newRadio/newRadioPage.mustache:14
+msgid "Go to programming page"
+msgstr "Aller à la page de programmation"
+
+#: templates/yabase/app/newRadio/newRadioPage.mustache:21
+msgid "Yasound radio creation"
+msgstr "Création d'une radio Yasound"
+
+#: templates/yabase/app/newRadio/newRadioPage.mustache:45
 msgid "Tags"
 msgstr "Tags"
 
-#: templates/yabase/app/newRadio/newRadioPage.mustache:31
+#: templates/yabase/app/newRadio/newRadioPage.mustache:46
 msgid "Description"
 msgstr "Description"
 
-#: templates/yabase/app/newRadio/newRadioPage.mustache:38
+#: templates/yabase/app/newRadio/newRadioPage.mustache:53
 msgid "Choose a picture"
 msgstr "Choisissez une image"
 
-#: templates/yabase/app/newRadio/newRadioPage.mustache:42
+#: templates/yabase/app/newRadio/newRadioPage.mustache:57
 msgid "Create the radio"
 msgstr "Créer la radio"
 
