--- a/yaapp/locale/fr/LC_MESSAGES/django.po
+++ b/yaapp/locale/fr/LC_MESSAGES/django.po
@@ -1832,11 +1832,14 @@ msgid ""
 "                Work in our Paris office and join our small and talented "
 "team\n"
 "                working on exciting new projects with our CTO.?"
-msgstr ""
+msgstr "\n"
+"Vous travaillerez en nos locaux de Paris 18ème sous la supervision de notre "
+"Directeur Technique et rejoindrez une petite équipe flexible, compétente et "
+"motivée par un projet passionant.<br />"
 
 #: templates/yabase/app/static/jobs.mustache:22
 msgid "Write us at"
-msgstr ""
+msgstr "Intéressé ? Envoyez nous un email à "
 
 #: templates/yabase/app/static/jobs.mustache:24
 msgid ""
@@ -1891,7 +1894,32 @@ msgid ""
 "management? Send\n"
 "                us an email at\n"
 "            "
-msgstr ""
+msgstr "\n"
+"<h3>Développeur mobile</h3>        <p>Vous participerez au développement du "
+"service Yasound sur mobile (iOS + Android)</p>      <ul>        <li>Maitrise "
+"du C++.</li>        <li>          Connaissances d'ObjectiveC et de JNI "
+"appréciées.</li>        <li>          Au moins une première expérience "
+"pratique de dev sur iOS ou Android.</li>        <li>          Goût et talent "
+"pour le développement d'interfaces graphiques originales et efficaces.</"
+"li>        <li>          Goût pour le dev graphique et audio.</li>        "
+"<li>          Bonne connaissances des problématiques de streaming audio.</"
+"li>        <li>          Outils de gestion revisions: Git + Github.</"
+"li>        <li>          Sensibilité musicale.</li>        <li>          "
+"Anglais technique requis.</li>        <li>          Curieux, rigoureux, "
+"efficace, passionné et sympa.<br />        </li>      </ul>      "
+"<h3>Développeur web et serveur d'application</h3>        <p>Vous "
+"participerez au développement du service Yasound (web et serveur).</p>      "
+"<ul>        <li>Maitrise: Python, Node/Javascript, Php, HTML 5, CSS.</"
+"li>        <li> Bonne connaissance du dev de serveurs d'application sur "
+"linux.</li>        <li> Algorithmique / optimisation / scalabilité.</"
+"li>        <li> Bonne connaissances des problématiques de streaming audio "
+"sur le web (Icecast2, rstp, etc)</li>        <li> SQL (mysql / postgresql).</"
+"li>        <li> Outils de gestion revisions: Git + Github.</li>        <li> "
+"Anglais technique requis.</li>        <li> Sensibilité musicale.</li>        "
+"<li> Curieux, rigoureux, efficace, passionné et sympa.<br />        </"
+"li>      </ul>      <h3>Stagiaires</h3>      <p>Vous recherchez un stage "
+"dans le domaine du développement web ou mobile, marketing online ou encore "
+"community management ? Envoyez nous un email à "
 
 #: templates/yabase/app/users/usersPage.mustache:3
 msgid "Connected users near your location"
